# codewars_c

./: .gitignore  CMakeLists.txt  Makefile  README.md  main
src/challenges/: test  test.c
src/utils/: math_utils.h
tests/: test  test.test.c
